# RGMesh

./: .gitignore  CMakeLists.txt  readme.md
RiemanGraph/: RiemannGraph.cpp  RiemannGraph.h  Smoothing.h  UGraph.h
apps/: Smoothing.cpp
